<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/notifications"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="normal" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/search"
            android:contentDescription="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="16dp"
                            android:paddingTop="12dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/user"
                                android:contentDescription="@string/icon" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/roboto_regular"
                                    android:text="@string/roman_kamushken"
                                    android:textColor="@color/text2"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/roboto_regular"
                                    android:text="@string/_2_days_ago"
                                    android:textColor="@color/time"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>


                        <TextView
                            android:layout_width="290dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto_regular"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/text1"
                            android:textColor="@color/text2"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="12dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/_117_replays"
                                android:textColor="@color/linear_color"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />

                            <ImageButton
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="230dp"
                                android:background="@android:color/transparent"
                                android:src="@drawable/thumb_up_outline"
                                android:contentDescription="@string/like" />

                        </LinearLayout>
                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="16dp"
                            android:paddingTop="12dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/user2"
                                android:contentDescription="@string/icon" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/roboto_regular"
                                    android:text="@string/tina_turbina"
                                    android:textColor="@color/text2"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/roboto_regular"
                                    android:text="@string/_18_minutes_ago"
                                    android:textColor="@color/time"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>


                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto_regular"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/text2"
                            android:textColor="@color/text2"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="12dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/_117_replays"
                                android:textColor="@color/linear_color"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />

                            <ImageButton
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="230dp"
                                android:background="@android:color/transparent"
                                android:src="@drawable/thumb_up_outline"
                                android:contentDescription="@string/like" />

                        </LinearLayout>
                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingStart="16dp"
                            android:paddingTop="12dp"
                            tools:ignore="RtlSymmetry">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/user3"
                                android:contentDescription="@string/icon" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/roboto_regular"
                                    android:text="@string/tomek_kuwalskij"
                                    android:textColor="@color/text2"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/roboto_regular"
                                    android:text="@string/_2_days_ago"
                                    android:textColor="@color/time"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>


                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="18dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto_regular"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/text2"
                            android:textColor="@color/text2"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="12dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/_117_replays"
                                android:textColor="@color/linear_color"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />

                            <ImageButton
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginStart="230dp"
                                android:background="@android:color/transparent"
                                android:src="@drawable/thumb_up_outline"
                                android:contentDescription="@string/like" />

                        </LinearLayout>
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="6dp"
            android:paddingStart="24dp"
            android:paddingBottom="10dp"
            tools:ignore="RtlSymmetry">

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:background="@android:color/transparent"
                android:src="@drawable/shopping"
                android:contentDescription="@string/shopping" />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:background="@android:color/transparent"
                android:src="@drawable/book_open_variant"
                android:contentDescription="@string/book" />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="6dp"
                android:background="@android:color/transparent"
                android:src="@drawable/cart"
                android:contentDescription="@string/cart" />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="6dp"
                android:background="@android:color/transparent"
                android:src="@drawable/tag_heart"
                android:contentDescription="@string/heart" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/heart_filled"
                    android:contentDescription="@string/heart_filled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textSize="12sp"
                    android:layout_marginTop="22dp"
                    android:textColor="@color/linear_color"
                    android:fontFamily="@font/roboto_regular"
                    />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>




